fix jumpy ui

--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,9 @@ input {
 
 }
 
-.top-message {
-  margin: 20px 0 0 0;
+.message-top {
+  margin: 10px 0 0 0;
+  height: 16px;
 }
 
 .last-guess {
